--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Home</title>
+    <title>About</title>
 </head>
 
 <body>
@@ -19,66 +19,25 @@
 </div>
   <div class="row">
     <div class="col-3">
-    <h3>Real Comments</h3>
+    <a href='real.html'><h3>Real Comments</h3></a>
   </div>
     <div class="col-3">
-    <h3>Posted Comments</h3>
+    <a href='post.html'><h3>Posted Comments</h3></a>
   </div>
     <div class="col-3">
-    <h3>Submit Comments</h3>
+    <a href='index.html'><h3>Submit Comments</h3></a>
   </div>
     <div class="col-3">
-    <h3>About</h3>
+    <a href='about.html'><h3>About</h3></a>
   </div>
 </div>
 
-<div class="row">
-  <div class="col-12">
-<h2>Submit A Comment</h2>
-</div>
 </div>
 
-<div class="row">
-  <div class="col-12">
-<h4>Name</h4>
-</div>
-</div>
+<img src='assets/img/about.jpeg' alt='Darkly lit trees covered in fog.' height='300' width='100%' />
 
-<div class="row">
-  <div class="col-12">
-<p class="name"></p>
-</div>
-</div>
-
-
-<div class="row">
-  <div class="col-12">
-<h4>Email</h4>
-</div>
-</div>
-
-<div class="row">
-  <div class="col-12">
-<p class="email"></p>
-</div>
-</div>
-
-
-<div class="row">
-  <div class="col-12">
-<h4>Comments</h4>
-</div>
-</div>
-
-<div class="row">
-  <div class="col-12">
-<p class="commentsInput"></p>
-</div>
-</div>
-
-
-</div>
-
+<h4>This project is for my DIG-245 course...</h4>
+<p> we were tasked with... </p>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
