--- a/post.html
+++ b/post.html
@@ -6,7 +6,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Home</title>
+    <title>Posted</title>
 </head>
 
 <body>
@@ -32,52 +32,10 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col-12">
-<h2>Submit A Comment</h2>
-</div>
 </div>
 
-<div class="row">
-  <div class="col-12">
-<h4>Name</h4>
-</div>
-</div>
+<img src='assets/img/post.jpg' alt='A field with yellow flowers in it. Trees in the background are blurred out, as the focus is on a small bit of flowers in the foreground.' height='300' width='100%' />
 
-<div class="row">
-  <div class="col-12">
-<p class="name"></p>
-</div>
-</div>
-
-
-<div class="row">
-  <div class="col-12">
-<h4>Email</h4>
-</div>
-</div>
-
-<div class="row">
-  <div class="col-12">
-<p class="email"></p>
-</div>
-</div>
-
-
-<div class="row">
-  <div class="col-12">
-<h4>Comments</h4>
-</div>
-</div>
-
-<div class="row">
-  <div class="col-12">
-<p class="commentsInput"></p>
-</div>
-</div>
-
-
-</div>
 
 
 
