--- a/post.html
+++ b/post.html
@@ -11,31 +11,56 @@
 
 <body>
 
-<div class="container-fluid">
+<div class="container-fluid px-0">
   <div class="row">
     <div class="col-12">
           <h1>Comment Filtering Software</h1>
 </div>
 </div>
-  <div class="row">
-    <div class="col-3">
-    <h3>Real Comments</h3>
+<div class="row">
+  <div class="col-12">
+<nav class="navbar navbar-expand-lg navbar-light " style='background-color: #97A7B3'>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html">Comment Filtering Software</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href='real.html'>Real Comments</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="post.html">Posted Comments</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Submit Comments</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Login</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-dark" type="submit">Search</button>
+      </form>
+    </div>
   </div>
-    <div class="col-3">
-    <h3>Posted Comments</h3>
-  </div>
-    <div class="col-3">
-    <h3>Submit Comments</h3>
-  </div>
-    <div class="col-3">
-    <h3>About</h3>
-  </div>
+</nav>
+</div>
 </div>
 
-</div>
 
+<div class="row">
+  <div class="col-12">
 <img src='assets/img/post.jpg' alt='A field with yellow flowers in it. Trees in the background are blurred out, as the focus is on a small bit of flowers in the foreground.' height='300' width='100%' />
+</div>
+</div>
+</div>
 
+<div class="container-fluid">
+  <p>nbi</p>
+</div>
 
 
 
