--- a/real.html
+++ b/real.html
@@ -1,46 +1,73 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Real</title>
+  <title>Real</title>
 </head>
 
 <body>
 
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-12">
-          <h1>Comment Filtering Software</h1>
-</div>
-</div>
-  <div class="row">
-    <div class="col-3">
-    <h3>Real Comments</h3>
-  </div>
-    <div class="col-3">
-    <h3>Posted Comments</h3>
-  </div>
-    <div class="col-3">
-    <h3>Submit Comments</h3>
-  </div>
-    <div class="col-3">
-    <h3>About</h3>
-  </div>
-</div>
-
-</div>
-
-<img src='assets/img/real.jpeg' alt='Darkly lit trees covered in fog.' height='300' width='100%' />
+  <div class="container-fluid px-0">
+    <div class="row">
+      <div class="col-12">
+        <h1>Comment Filtering Software</h1>
+      </div>
+    </div>
 
 
+    <div class='row'>
+      <div class='col-12'>
+        <nav class="navbar navbar-expand-lg navbar-light " style='background-color: #97A7B3'>
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Comment Filtering Software</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href='real.html'>Real Comments</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="post.html">Posted Comments</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Submit Comments</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Login</a>
+                </li>
+              </ul>
+              <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-dark" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
+  </div>
+
+    <div class='row'>
+      <div class='col-12'>
+        <img src='assets/img/real.jpeg' alt='Darkly lit trees covered in fog.' height='300' width='100%' />
+      </div>
+    </div>
+
+    <div class="container-fluid">
+      <p>nbihb</p>
+</div>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
+
 </html>
