--- a/index.html
+++ b/index.html
@@ -63,25 +63,25 @@
 
 <div class="row mt-3">
   <div class="col-12">
-<form>
+<form id='commentForm' action='real.html' method='post'>
   <div class="mb-3">
     <label for="inputName" class="form-label">Name</label>
-    <input type="username" class="form-control" id="inputName" placeholder="Name">
+    <input type="username" class="form-control" id="inputName" placeholder="Name" required>
   </div>
   <div class="mb-3">
   <label for="email" class="form-label">Email address</label>
-  <input type="email" class="form-control" id="email" placeholder="Email">
+  <input type="email" class="form-control" id="email" placeholder="Email" required>
   <div id="emailNote" class="form-text">We'll never share your email with anyone else.</div>
 </div>
 <div class="mb-3">
   <label for="commentsArea" class="form-label">Comments</label>
-  <textarea class="form-control" id="commentsArea" rows="3" placeholder="Type your review here"></textarea>
+  <textarea class="form-control" id="commentsArea" rows="3" placeholder="Type your review here" required></textarea>
 </div>
   <div class="mb-3 form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
     <label class="form-check-label" for="robotCheck">I am not a robot!</label>
   </div>
-  <button type="submit" class="btn btn-outline-secondary">Submit</button>
+  <button onclick='collect()' type="submit" class="btn btn-outline-secondary">Submit</button>
 </form>
 
 </div>
@@ -94,6 +94,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
