commit 5. trying to figure out js for single page

--- a/pages/real.html
+++ b/pages/real.html
@@ -22,7 +22,7 @@
 
     <div class='row'>
       <div class='col-12'>
-        <nav class="navbar navbar-expand-lg navbar-light " style='background-color: #97A7B3'>
+        <nav class="navbar navbar-expand-lg fixed-top navbar-light " style='background-color: #97A7B3'>
           <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Comment Filtering Software</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +56,7 @@
 
     <div class='row'>
       <div class='col-12'>
-        <img src='assets/img/real.jpeg' alt='Darkly lit trees covered in fog.' height='300' width='100%' />
+        <img src='../assets/img/real.jpeg' alt='Darkly lit trees covered in fog.' height='300' width='100%' />
       </div>
     </div>
 
