--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Posted</title>
+    <title>Home</title>
 </head>
 
 <body>
@@ -17,9 +17,10 @@
           <h1>Comment Filtering Software</h1>
 </div>
 </div>
+
 <div class="row">
   <div class="col-12">
-<nav class="navbar navbar-expand-lg navbar-light " style='background-color: #97A7B3'>
+<nav class="navbar navbar-expand-md fixed-top navbar-light" style='background-color: #97A7B3'>
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">Comment Filtering Software</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,23 +50,54 @@
 </nav>
 </div>
 </div>
-
-
-<div class="row">
-  <div class="col-12">
-<img src='assets/img/post.jpg' alt='A field with yellow flowers in it. Trees in the background are blurred out, as the focus is on a small bit of flowers in the foreground.' height='300' width='100%' />
-</div>
-</div>
 </div>
 
 <div class="container-fluid">
-  <p>nbi</p>
+
+<div class="row mt-5">
+  <div class="col-12">
+<h2>Submit A Comment</h2>
+</div>
+</div>
+
+<!-- we'll load the single page application into this div -->
+<div id="rotation"></div>
+
+
+<div class="row mt-3">
+  <div class="col-12">
+<form id='commentForm' action='real.html' method='post'>
+  <div class="mb-3">
+    <label for="inputName" class="form-label">Name</label>
+    <input type="username" class="form-control" id="inputName" placeholder="Name" required>
+  </div>
+  <div class="mb-3">
+  <label for="email" class="form-label">Email address</label>
+  <input type="email" class="form-control" id="email" placeholder="Email" required>
+  <div id="emailNote" class="form-text">We'll never share your email with anyone else.</div>
+</div>
+<div class="mb-3">
+  <label for="commentsArea" class="form-label">Comments</label>
+  <textarea class="form-control" id="commentsArea" rows="3" placeholder="Type your review here" required></textarea>
+</div>
+  <div class="mb-3 form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
+    <label class="form-check-label" for="robotCheck">I am not a robot!</label>
+  </div>
+  <button onclick='collect()' type="submit" class="btn btn-outline-secondary">Submit</button>
+</form>
+
+</div>
+</div>
+
+
 </div>
 
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
