--- a/home.html
+++ b/home.html
@@ -57,6 +57,7 @@
 
 <!-- we'll load the single page application into this div -->
 <div id="rotation"></div>
+<button id='test'>start</button>
 
 
 </div>
