--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href='real.html'>Real Comments</a>
+            <a class="nav-link" aria-current="page" href='pages/real.html'>Real Comments</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="post.html">Posted Comments</a>
+            <a class="nav-link" href="pages/post.html">Posted Comments</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Submit Comments</a>
+            <a class="nav-link" href="pages/index.html">Submit Comments</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Login</a>
