--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
   <!-- we'll load the single page application into this div -->
   <div id="rotation"></div>
+  <button id='test'>test</button>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
