--- a/pages/submit.html
+++ b/pages/submit.html
@@ -11,6 +11,8 @@
 
 <body>
 
+<h2 style='text-align: center'>Have a comment?</h2>
+<div class='container-fluid'>
 <div class="row mt-3">
   <div class="col-12">
 <form id='commentForm' action='real.html' method='post'>
@@ -34,6 +36,7 @@
   <button onclick='collect()' type="submit" class="btn btn-outline-secondary">Submit</button>
 </form>
 
+</div>
 </div>
 </div>
 
