--- a/pages/submit.html
+++ b/pages/submit.html
@@ -15,7 +15,7 @@
 <div class='container-fluid'>
 <div class="row mt-3">
   <div class="col-12">
-<form id='commentForm' action='real.html' method='post'>
+<form id='commentForm' action='real.html' method='post' onsubmit='preventDefault'>
   <div class="mb-3">
     <label for="inputName" class="form-label">Name</label>
     <input type="username" class="form-control" id="inputName" placeholder="Name" required>
@@ -33,7 +33,7 @@
     <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
     <label class="form-check-label" for="robotCheck">I am not a robot!</label>
   </div>
-  <button onclick='collect()' type="submit" class="btn btn-outline-secondary">Submit</button>
+  <button onclick='collect()' type="submit" class="btn btn-outline-secondary" id='submitBtn'>Submit</button>
 </form>
 
 </div>
