--- a/pages/real.html
+++ b/pages/real.html
@@ -13,53 +13,22 @@
 <body>
 
 
-    <div class='row'>
-      <div class='col-12'>
-        <nav class="navbar navbar-expand-lg fixed-top navbar-light " style='background-color: #97A7B3'>
-          <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Comment Filtering Software</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href='real.html'>Real Comments</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="post.html">Posted Comments</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Submit Comments</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Login</a>
-                </li>
-              </ul>
-              <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-dark" type="submit">Search</button>
-              </form>
-            </div>
-          </div>
-        </nav>
-      </div>
-    </div>
-  </div>
-
+<div class='container'>
     <div class='row'>
       <div class='col-12'>
         <img src='../assets/img/real.jpeg' alt='Darkly lit trees covered in fog.' height='300' width='100%' />
       </div>
     </div>
+  </div>
 
     <div class="container-fluid">
-      
+
 </div>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src='assets/js/main.js'></script>
 
 </body>
 
