--- a/index.html
+++ b/index.html
@@ -54,10 +54,38 @@
 
   <div class="container-fluid">
 
+<div class='row'>
+  <div class='col'>
+  <h2>How It Works</h2>
+</div>
+</div>
+<div class='row'>
+  <div class='col-4'>
+  <h3>User Action</h3>
+</div>
+  <div class='col-4'>
+  <h3>Code Reaction</h3>
+</div>
+    <div class='col-4'>
+  <h3>Sentiment Conclusion</h3>
+</div>
+</div>
+
+<div class='row'>
+  <div class='col'>
+  <p>A user (you) submits your comment to the company or business offering your honest review and feedback of their product or service.</p>
+</div>
+  <div class='col'>
+  <p>Our program code takes the user’s submission and saves it to a database. The submission also activates JavaScript code that runs a sentiment analysis and decides if the submission is positive or negative.</p>
+</div>
+  <div class='col'>
+  <p>If the user’s input was coded as positive, it will return a page designated for postive comments and a few notes on why the comment was positive. If the review was negative, then the program will return a page for negative comments and notes on how this was determined.</p>
+</div>
+</div>
 
   <!-- we'll load the single page application into this div -->
   <div id="rotation"></div>
-  <button id='homeBtn'>test</button>
+  <button id='homeBtn'>Try It Out!</button>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
