--- a/pages/subs.html
+++ b/pages/subs.html
@@ -6,22 +6,33 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Posted</title>
+    <title>Real</title>
 </head>
 
 <body>
 
-<div class='container'>
-<div class="row">
+<h2 style='text-align: center'>Have a comment?</h2>
+<div class='container-fluid'>
+<div class="row mt-3">
   <div class="col-12">
-<img src='../assets/img/post.jpg' alt='A field with yellow flowers in it. Trees in the background are blurred out, as the focus is on a small bit of flowers in the foreground.' height='300' width='100%' />
+
+    <div class='container'>
+        <div class='row'>
+          <div class='col-12'>
+            <img src='../assets/img/real.jpeg' alt='Darkly lit trees covered in fog.' height='300' width='100%' />
+          </div>
+        </div>
+      </div>
+
+        <div class="container-fluid">
+
+    </div>
+
 </div>
 </div>
 </div>
 
-<div class="container-fluid">
-  <p>test text</p>
-</div>
+
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
