--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href='pages/real.html'>Real Comments</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="pages/post.html">Posted Comments</a>
+            <a class="nav-link" href="pages/posts.html">Posted Comments</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="pages/index.html">Submit Comments</a>
@@ -85,7 +82,7 @@
 
   <!-- we'll load the single page application into this div -->
   <div id="rotation"></div>
-  <button id='homeBtn'>Try It Out!</button>
+  <button id='homeBtn'>Try The Demo!</button>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
