--- a/pages/posts.html
+++ b/pages/posts.html
@@ -11,12 +11,12 @@
 
 <body>
 
-<h2 style='text-align: center'>Have a comment?</h2>
+<h2 style='text-align: center'>Posted Comments</h2>
 <div class='container-fluid'>
 <div class="row mt-3">
   <div class="col-12">
 
-    <div class='container'>
+    <div class='container-fluid'>
         <div class='row'>
           <div class='col-12'>
             <img src='../assets/img/real.jpeg' alt='Darkly lit trees covered in fog.' height='300' width='100%' />
@@ -24,7 +24,7 @@
         </div>
       </div>
 
-        <div class="container-fluid">
+    <div class="container-fluid">
 
     </div>
 
