--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Home</title>
+  <title>Home</title>
 </head>
 
 <body>
@@ -14,75 +15,78 @@
   <div class="container-fluid px-0">
     <div class="row">
       <div class="col-12">
-            <h1>Comment Filtering Software</h1>
-  </div>
-  </div>
-
-  <div class="row">
-    <div class="col-12">
-  <nav class="navbar navbar-expand-md fixed-top navbar-light" style='background-color: #97A7B3'>
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Comment Filtering Software</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="pages/posts.html">Posted Comments</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="pages/index.html">Submit Comments</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Login</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-dark" type="submit">Search</button>
-        </form>
+        <h1>Comment Filtering Software</h1>
       </div>
     </div>
-  </nav>
-  </div>
-  </div>
+
+    <div class="row">
+      <div class="col-12">
+        <nav class="navbar navbar-expand-md fixed-top navbar-light" style='background-color: #97A7B3'>
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Comment Filtering Software</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" href="pages/posts.html">Posted Comments</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="pages/index.html">Submit Comments</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Login</a>
+                </li>
+              </ul>
+              <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-dark" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
   </div>
 
   <div class="container-fluid">
 
-<div class='row'>
-  <div class='col'>
-  <h2>How It Works</h2>
-</div>
-</div>
-<div class='row'>
-  <div class='col-4'>
-  <h3>User Action</h3>
-</div>
-  <div class='col-4'>
-  <h3>Code Reaction</h3>
-</div>
-    <div class='col-4'>
-  <h3>Sentiment Conclusion</h3>
-</div>
-</div>
+    <div class='row'>
+      <div class='col'>
+        <h2>How It Works</h2>
+      </div>
+    </div>
+    <div class='row'>
+      <div class='col-4'>
+        <h3>User Action</h3>
+      </div>
+      <div class='col-4'>
+        <h3>Code Reaction</h3>
+      </div>
+      <div class='col-4'>
+        <h3>Sentiment Conclusion</h3>
+      </div>
+    </div>
 
-<div class='row'>
-  <div class='col'>
-  <p>A user (you) submits your comment to the company or business offering your honest review and feedback of their product or service.</p>
-</div>
-  <div class='col'>
-  <p>Our program code takes the user’s submission and saves it to a database. The submission also activates JavaScript code that runs a sentiment analysis and decides if the submission is positive or negative.</p>
-</div>
-  <div class='col'>
-  <p>If the user’s input was coded as positive, it will return a page designated for postive comments and a few notes on why the comment was positive. If the review was negative, then the program will return a page for negative comments and notes on how this was determined.</p>
-</div>
-</div>
+    <div class='row'>
+      <div class='col'>
+        <p>A user (you) submits your comment to the company or business offering your honest review and feedback of their product or service.</p>
+      </div>
+      <div class='col'>
+        <p>Our program code takes the user’s submission and saves it to a database. The submission also activates JavaScript code that runs a sentiment analysis and decides if the submission is positive or negative.</p>
+      </div>
+      <div class='col'>
+        <p>If the user’s input was coded as positive, it will return a page designated for postive comments and a few notes on why the comment was positive. If the review was negative, then the program will return a page for negative comments and
+          notes on how this was determined.</p>
+      </div>
+    </div>
 
-  <!-- we'll load the single page application into this div -->
-  <div id="rotation"></div>
-  <button id='homeBtn'>Try The Demo!</button>
+    <!-- we'll load the single page application into this div -->
+    <div id="rotation">
+      <button id='homeBtn'>Try The Demo!</button>
+    </div>
+
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -90,4 +94,5 @@
     <script src='assets/js/main.js'></script>
 
 </body>
+
 </html>
