--- a/pages/posts.html
+++ b/pages/posts.html
@@ -1,45 +1,21 @@
-<!doctype html>
-<html lang="en">
+<h2 style='text-align: center'>Posted Comments</h2>
+<div class='container-fluid'>
+  <div class="row mt-3">
+    <div class="col-12">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-  <title>Real</title>
-</head>
-
-<body>
-
-  <h2 style='text-align: center'>Posted Comments</h2>
-  <div class='container-fluid'>
-    <div class="row mt-3">
-      <div class="col-12">
-
-        <div class='container-fluid'>
-          <div class='row'>
-            <div class='col-12'>
-              <img src='../assets/img/real.jpeg' alt='Darkly lit trees covered in fog.' height='300' width='100%' />
-            </div>
+      <div class='container-fluid'>
+        <div class='row'>
+          <div class='col-12'>
+            <img src='../assets/img/real.jpeg' alt='Darkly lit trees covered in fog.' height='300' width='100%' />
           </div>
         </div>
-
-        <div class="container-fluid">
-
-        </div>
-
       </div>
+
+      <div class="container-fluid">
+        <h3 class='resultSentence'></h3>
+        <p class='result'></p>
+      </div>
+
     </div>
   </div>
-
-
-
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script src='assets/js/main.js'></script>
-
-</body>
-
-</html>
+</div>
