--- a/pages/submit.html
+++ b/pages/submit.html
@@ -1,16 +1,3 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-  <title>Home</title>
-</head>
-
-<body>
 
   <h2 style='text-align: center'>Have a comment?</h2>
   <div class='container-fluid'>
@@ -18,35 +5,26 @@
       <div class="col-12">
         <form id='commentForm' action='real.html' method='post'>
 
-          <div class="mb-3">
+          <!-- <div class="mb-3">
             <label for="inputName" class="form-label">Name</label>
             <input type="username" class="form-control" id="inputName" placeholder="Name" required>
-          </div>
+          </div> -->
 
           <div class="mb-3">
             <label for="commentsArea" class="form-label">Comments</label>
-            <textarea class="form-control" id="commentsArea" rows="3" placeholder="Type your review here" required></textarea>
+            <textarea class="form-control" id="commentsArea" rows="3" required></textarea>
           </div>
 
-          <div class="mb-3 form-check">
+          <!-- placeholder="Type your review here" -->
+
+          <!-- <div class="mb-3 form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
             <label class="form-check-label" for="robotCheck">I am not a robot!</label>
+          </div> -->
 
-          </div>
           <button type="submit" class="btn btn-outline-secondary" id='submitBtn'>Submit</button>
         </form>
 
       </div>
     </div>
   </div>
-
-
-
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script src='assets/js/main.js'></script>
-
-</body>
-
-</html>
