trying array version where user doesn't give input just chooses option

--- a/pages/submit.html
+++ b/pages/submit.html
@@ -9,6 +9,11 @@
             <input type="username" class="form-control" id="inputName" placeholder="Name" required>
           </div> -->
 
+        <select id='selectSentiment'>
+          <option value='negative'>Negative</option>
+          <option value='positive'>Positive</option>
+        </select>
+
         <div class="mb-3">
           <label for="commentsArea" class="form-label">Comments</label>
           <textarea class="form-control" id="commentsArea" rows="3" required></textarea>
