prints on the page!!!!

--- a/pages/submit.html
+++ b/pages/submit.html
@@ -9,10 +9,9 @@
             <input type="username" class="form-control" id="inputName" placeholder="Name" required>
           </div> -->
 
-        <select id='selectSentiment'>
-          <option value='negative'>Negative</option>
-          <option value='positive'>Positive</option>
-        </select>
+<button type="button" name="negative" id='negativeBtn'>Get A Negative Comment</button>
+<button type="button" name="positive" id='positiveBtn'>Get A Positive Comment</button>
+
 
         <div class="mb-3">
           <label for="commentsArea" class="form-label">Comments</label>
