working on css and emojis

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <!-- we'll load the single page application into this div -->
     <div id="rotation">
-      <button id='homeBtn' class='startDemoBtn'>Try The Demo!</button>
+      <button id='homeBtn' class='btn btn-info'>Try The Demo!</button>
     </div>
 
 
