--- a/index.html
+++ b/index.html
@@ -23,19 +23,11 @@
       <div class="col-12">
         <nav class="navbar navbar-expand-md fixed-top navbar-light" style='background-color: #97A7B3'>
           <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Comment Filtering Software</a>
+            <a class="navbar-brand" href="index.html" style="text-align: center">Comment Filtering Software</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link" href="pages/posts.html">Posted Comments</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Login</a>
-                </li>
-              </ul>
             </div>
           </div>
         </nav>
