--- a/pages/posts.html
+++ b/pages/posts.html
@@ -1,13 +1,14 @@
-<h2 style='text-align: center'>Posted Comments</h2>
+
+<h2 style='text-align: center'>Comment Analysis</h2>
 <div class='container-fluid'>
   <div class="row mt-3">
     <div class="col-12">
 
-      <div class="container-fluid">
-        <h3 class='resultSentence'></h3>
-        <p class='result'></p>
-      </div>
+      <h3 class='resultSentence'></h3>
+      <p class='result'>
 
+        <button type="button" class="btn btn-outline-dark" id="BackBtn">Back!</button>
+      </p>
     </div>
   </div>
 </div>
