--- a/pages/submit.html
+++ b/pages/submit.html
@@ -1,4 +1,4 @@
-<h2 style='text-align: center'>Have a comment?</h2>
+<h2 style='text-align: center'>Comment Submission</h2>
 <div class='container-fluid'>
   <div class="row mt-3">
     <div class="col-12">
