--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Yaldevi:wght@300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bowlby+One&family=Sunflower:wght@300;500;700&family=Yaldevi:wght@200;300;400;500&display=swap" rel="stylesheet">
 
   <title>Home</title>
 </head>
@@ -23,11 +31,21 @@
       <div class="col-12">
         <nav class="navbar navbar-expand-md fixed-top navbar-light" style='background-color: #97A7B3'>
           <div class="container-fluid">
-            <a class="navbar-brand" href="index.html" style="text-align: center">Comment Filtering Software</a>
+            <a class="navbar-brand webTitle" href="index.html">Comment Filtering Software</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="why.html">Why This?</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="https://github.com/emmelton/dig245-final" target="_blank">Site Repo</a>
+                </li>
             </div>
           </div>
         </nav>
@@ -37,46 +55,65 @@
 
   <div class="container-fluid">
 
-    <div class='row'>
+    <div class='row mt-5'>
       <div class='col'>
         <h2>How It Works</h2>
       </div>
     </div>
-    <div class='row'>
-      <div class='col-4'>
-        <h3>User Action</h3>
+
+    <div class='row' style='background: none;'>
+      <div class='col-12 col-sm-4' style='padding: 15px;'>
+        <div style='background: #DEDEDE; padding: 8px'>
+          <h3>User Action</h3>
+          <div class='row'>
+            <p>A user (you) submits your comment to the company or business offering your honest review and feedback of their product or service.</p>
+          </div>
+        </div>
       </div>
-      <div class='col-4'>
-        <h3>Code Reaction</h3>
+
+      <div class='col-12 col-sm-4' style='padding: 15px'>
+        <div style='background: #DEDEDE; padding: 8px'>
+          <h3>Code Reaction</h3>
+          <div class="row">
+            <p>Our program code takes the user’s submission and saves it to a database. The submission also activates JavaScript code that runs a sentiment analysis and decides if the submission is positive or negative.</p>
+          </div>
+        </div>
       </div>
-      <div class='col-4'>
-        <h3>Sentiment Conclusion</h3>
+
+
+      <div class='col-12 col-sm-4' style='padding: 15px'>
+        <div style='background: #DEDEDE; padding: 8px'>
+          <h3>Sentiment Conclusion</h3>
+          <div class='row'>
+            <p>If the user’s input was coded as positive, it will return a page designated for postive comments and a few notes on why the comment was positive. If the review was negative, then the program will return a page for negative comments and
+              notes on how this was determined.</p>
+          </div>
+        </div>
       </div>
     </div>
+  </div>
 
-    <div class='row'>
-      <div class='col'>
-        <p>A user (you) submits your comment to the company or business offering your honest review and feedback of their product or service.</p>
+
+  <!-- we'll load the single page application into this div -->
+  <div class="row">
+    <div class="col-12">
+
+      <div id="rotation">
+        <div class="row mt-5">
+          <div class='col-12 text-center'>
+            <button id='homeBtn' class='btn btn-info btn-lg'>Try The Demo!</button>
+          </div>
+        </div>
       </div>
-      <div class='col'>
-        <p>Our program code takes the user’s submission and saves it to a database. The submission also activates JavaScript code that runs a sentiment analysis and decides if the submission is positive or negative.</p>
-      </div>
-      <div class='col'>
-        <p>If the user’s input was coded as positive, it will return a page designated for postive comments and a few notes on why the comment was positive. If the review was negative, then the program will return a page for negative comments and
-          notes on how this was determined.</p>
-      </div>
+
     </div>
-
-    <!-- we'll load the single page application into this div -->
-    <div id="rotation">
-      <button id='homeBtn' class='btn btn-info'>Try The Demo!</button>
-    </div>
+  </div>
 
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src='assets/js/main.js'></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src='assets/js/main.js'></script>
 
 </body>
 
