--- a/pages/posts.html
+++ b/pages/posts.html
@@ -1,14 +1,13 @@
 
 <h2 style='text-align: center'>Comment Analysis</h2>
 <div class='container-fluid'>
-  <div class="row mt-3">
+  <div class="row">
     <div class="col-12">
 
-      <h3 class='resultSentence'></h3>
+      <h4 class='resultSentence'>The results, by sentence, is as follows:</h4>
       <p class='result'>
-
-        <button type="button" class="btn btn-outline-dark" id="BackBtn">Back!</button>
       </p>
+      <button type="button" class="btn btn-outline-dark" id="backBtn">Back!</button>
     </div>
   </div>
 </div>
