commit & check for validation errors

--- a/about.html
+++ b/about.html
@@ -1,37 +1,100 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Yaldevi:wght@300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bowlby+One&family=Sunflower:wght@300;500;700&family=Yaldevi:wght@200;300;400;500&display=swap" rel="stylesheet">
 
-    <title>About</title>
+  <title>About</title>
 </head>
 
 <body>
 
-<div class="container-fluid px-0">
-  <div class="row">
-    <div class="col-12">
-          <h1>Comment Filtering Software</h1>
-</div>
+  <div class="container-fluid px-0">
+    <div class="row">
+      <div class="col-12">
+        <nav class="navbar navbar-expand-md static-top navbar-light" style='background-color: #97A7B3'>
+          <div class="container-fluid">
+            <a class="navbar-brand webTitle" href="index.html">Comment Software</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="https://github.com/emmelton/dig245-final" target="_blank">Site Repo</a>
+                </li>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
+  </div>
 
 
+  <div class="container">
 
-</div>
+    <div class="row">
+      <div class="col-12">
+        <h2>ABOUT THE PROJECT</h2>
+      </div>
+    </div>
 
-<img src='assets/img/about.jpeg' alt='Darkly lit trees covered in fog.' height='300' width='100%' />
-</div>
+      <div class='row'>
+    <div class='col-12'>
+        <p>This website was built for my DIG-245 course taken Fall semester of 2021. Within the class, we were tasked for our final to create a website that challenged us to further investigate a theme, or a set of themes, from the course. We were
+          asked to create a web application that makes the topic more understandable, relevant, or transparent.
+        </p>
+      </div>
+    </div>
 
-<div class="container-fluid px-0">
-<h4>This project is for my DIG-245 course...</h4>
-<p> we were tasked with... </p>
-</div>
+      <div class='row'>
+    <div class='col-12'>
+        <p>This site employs HTML, CSS, and Javascript code and incorporates skills and themes we have learned within our course this past semester. It is interactive for the user through the button and text area section, where users can interact
+          and input their own text to receive a sentiment analysis.</p>
+      </div>
+    </div>
+
+      <div class="row">
+    <div class='col-12'>
+        <p>The user inputs their own data or input and the website transforms the data to reveal insights into the sentiment of the sentence(s) that the API and code received.</p>
+      </div>
+    </div>
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <div class='col-12'>
+    <div class="row">
+      <h2>WHY THIS DEMO SOFTWARE?</h2>
+    </div>
+  </div>
+
+  <div class='col-12'>
+    <div class="row">
+      <p>I chose to do a social media comment analysis because I did a court case in high school, through my school and county’s Mock Trial program, on cyberbullying. Although it seems more mild than physical fights from bullying, it is still an issue
+      that is plaguing our society. The court case demonstrated that this issue is far from over since so many people are constantly plugged in and online. Through the concepts and skills I have learned over the semester, a comment review software
+      that helps companies and platforms be aware of the user interactions on their sites might help mitigate the risk and effects of cyberbullying. Although this is just a course project and will not be widely used by any social media platform, I
+      hope it draws attention to how diction in sentences lead to positive and negative sentiment, and to an understanding that negative sentiment can be hurtful and cause pain and problems over time or with continual appearance in someone’s life.</p>
+    </div>
+  </div>
+
+  </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src='assets/js/main.js'></script>
 
 </body>
+
 </html>
