--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Yaldevi:wght@300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Yaldevi:wght@300&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bowlby+One&family=Sunflower:wght@300;500;700&family=Yaldevi:wght@200;300;400;500&display=swap" rel="stylesheet">
@@ -23,15 +23,9 @@
   <div class="container-fluid px-0">
     <div class="row">
       <div class="col-12">
-        <h1>Comment Filtering Software</h1>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-12">
-        <nav class="navbar navbar-expand-md fixed-top navbar-light" style='background-color: #97A7B3'>
+        <nav class="navbar navbar-expand-md static-top navbar-light" style='background-color: #97A7B3'>
           <div class="container-fluid">
-            <a class="navbar-brand webTitle" href="index.html">Comment Filtering Software</a>
+            <a class="navbar-brand webTitle" href="index.html">Comment Software</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -39,9 +33,6 @@
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="why.html">Why This?</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="https://github.com/emmelton/dig245-final" target="_blank">Site Repo</a>
@@ -55,38 +46,41 @@
 
   <div class="container-fluid">
 
-    <div class='row mt-5'>
+<div class="row mt-4">
+</div>
+
+</div>
+    <div class='row mt-3'>
       <div class='col'>
         <h2>How It Works</h2>
       </div>
     </div>
 
     <div class='row' style='background: none;'>
-      <div class='col-12 col-sm-4' style='padding: 15px;'>
+      <div class='col-12 col-md-4' style='padding: 15px;'>
         <div style='background: #DEDEDE; padding: 8px'>
           <h3>User Action</h3>
           <div class='row'>
-            <p>A user (you) submits your comment to the company or business offering your honest review and feedback of their product or service.</p>
+            <p>A user (you) selects the type of sentiment they would like to “comment” on social media. They may write a comment themselves, or, if they are struggling, they may click a button for a random comment. It will populate a positive or negative comment, depending on the button selected. This user interaction is to simulate the commenting of real-time users on social media.</p>
           </div>
         </div>
       </div>
 
-      <div class='col-12 col-sm-4' style='padding: 15px'>
+      <div class='col-12 col-md-4' style='padding: 15px'>
         <div style='background: #DEDEDE; padding: 8px'>
           <h3>Code Reaction</h3>
           <div class="row">
-            <p>Our program code takes the user’s submission and saves it to a database. The submission also activates JavaScript code that runs a sentiment analysis and decides if the submission is positive or negative.</p>
+            <p>Our program takes the user’s submission and analyzes the words you use to determine if the sentence holds a positive, negative, or neutral sentiment. The program then applies an emoji that aligns with the positive, negative, or neutral sentiment and uses it as a visual representation of the sentence’s sentiment type. This is the comment analysis that is applied to social media.</p>
           </div>
         </div>
       </div>
 
 
-      <div class='col-12 col-sm-4' style='padding: 15px'>
+      <div class='col-12 col-md-4' style='padding: 15px'>
         <div style='background: #DEDEDE; padding: 8px'>
           <h3>Sentiment Conclusion</h3>
           <div class='row'>
-            <p>If the user’s input was coded as positive, it will return a page designated for postive comments and a few notes on why the comment was positive. If the review was negative, then the program will return a page for negative comments and
-              notes on how this was determined.</p>
+            <p>This program is a demo of our software that analyzes comments on social media to determine if users are commenting positively or negatively on user’s posts. The goal is to lessen the social media and internet bullying that occurs in today’s day and age. Companies and platforms can use our program to target comments that need to go under review for cyberbullying or libel.</p>
           </div>
         </div>
       </div>
