--- a/pages/posts.html
+++ b/pages/posts.html
@@ -7,6 +7,8 @@
       <h4 class='resultSentence'>The results, by sentence, is as follows:</h4>
       <p class='result'>
       </p>
+      <div class="row">
+        <div class="col">
       <button type="button" class="btn btn-outline-dark" id="backBtn">Back!</button>
     </div>
   </div>
